<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#78c2c5"
    android:gravity="center"
    tools:context=".SplashScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:fontFamily="@font/aldrich"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/invoice_genie"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:fontFamily="@font/aldrich"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/managing_business_in_a_minute"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/order_success"
        android:contentDescription="@string/splash_screen"/>

    <ProgressBar
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/white"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/loading"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aldrich"/>

</LinearLayout>