<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/about_us_toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_us_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/about_us_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/about_us_order_about_us_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:fontFamily="@font/aldrich"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about_us_toolBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/invoice_genie"
            android:textAlignment="center"
            android:textColor="#058575"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/order_success"
            android:contentDescription="@string/about_us"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/app_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:id="@+id/individual_product_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_us_write_to_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_to_us"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/about_us_call_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_us"
                android:textSize="16sp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_number" />

            <TextView
                android:id="@+id/about_us_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="16sp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_policy" />

        </LinearLayout>

        <View
            android:id="@+id/individual_product_divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_1_0"
            android:textSize="14sp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/aldrich"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/ic_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genie_ltd_2021"
            android:textSize="14sp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/aldrich"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/ic_copyright" />

    </LinearLayout>

</RelativeLayout>