<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeInvoice">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/home_invoice_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_invoice_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/home_invoice_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/home_invoice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order_id"
                android:fontFamily="@font/aldrich"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/home_invoice_top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_invoice_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:text="@string/customer_name"/>

            <TextView
                android:id="@+id/home_invoice_customer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:text="@string/customer_email"/>

            <TextView
                android:id="@+id/home_invoice_order_timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:text="@string/order_date_and_time"/>

            <View
                android:id="@+id/home_invoice_detail_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/home_invoice_order_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:text="@string/order_amount"/>

            <TextView
                android:id="@+id/home_invoice_order_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/items"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/individual_items_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:id="@+id/home_invoice_end_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/home_invoice_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/end_of_invoice"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_invoice_share"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_share"
        android:contentDescription="@string/share_invoice"/>

</RelativeLayout>